# kosmorro-discord-bot

./: LICENSE.md  README.md  pyproject.toml  webhook-call.py
.github/: dependabot.yml
.github/workflows/: black.yml  discord-webhook.yml
