[tool.poetry]
name = "kosmorro-discord-webhook"
version = "0.1.0"
description = "A script that computes the astronomical events of the day and sends them to a Discord webhook."
authors = ["Jérôme Deuchnord <jerome@deuchnord.fr>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
kosmorrolib = "^1.0"
Babel = "^2.17.0"
requests = "^2.32.4"

[tool.poetry.dev-dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
